[package]
name = "pigeon-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
pigeon-core = { path = "../pigeon-core" }
piegon-codegen = { path = "../piegon-codegen" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
axum = "0.8.4"
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
chrono = "*"